syntax = "proto3";

package accounts;

option go_package = "github.com/danielhoward314/packet-sentry/protogen/golang/accounts";

import "google/api/annotations.proto";
import "google/api/http.proto";

service AccountsService {
  rpc Signup (SignupRequest) returns (SignupResponse) {
    option (google.api.http) = {
      post: "/v1/signup"
      body: "*"
    };
  }
  rpc Verify (VerificationRequest) returns (VerificationResponse) {
    option (google.api.http) = {
      post: "/v1/verify"
      body: "*"
    };
  }
}

message SignupRequest {
  string organization_name = 1;
  string primary_administrator_email = 2;
  string primary_administrator_name = 3;
  string primary_administrator_cleartext_password = 4;
}

message SignupResponse {
  string token = 1;
}

message VerificationRequest {
  string token = 1;
  string verification_code = 2;
}

message VerificationResponse {
  string admin_ui_access_token = 1;
  string admin_ui_refresh_token = 2;
  string api_access_token = 3;
  string api_refresh_token = 4;
}